<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.flowershop.MainActivity">


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/market" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/architects_daughter"
            android:rotation="-20"
            android:text="@string/Sale"
            android:textColor="@color/colorWhite"
            android:textSize="28sp" />

    </RelativeLayout>

    <TextView
        android:text="@string/Select"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </Spinner>

    <ImageView
        android:id="@+id/goodsImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cactus" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/priceTitleTextView"
            android:text="@string/Order"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_below = "@id/priceTitleTextView"
            android:text="@string/nol"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/currencyTextView"
            android:layout_below = "@id/priceTitleTextView"
            android:layout_toEndOf="@id/priceTextView"
            android:text="@string/Dollar"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/quantityTitleTextView"
            android:text="@string/Quantity"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@id/priceTitleTextView"
            android:layout_marginStart="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/minusButton"
            android:onClick="decreaseQuantity"
            android:layout_alignParentStart="true"
            android:layout_below="@id/quantityTitleTextView"
            android:text="@string/minus"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="210dp"
            android:layout_marginTop ="5dp"
            android:background="@color/colorPrimaryDark"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_below="@+id/priceTitleTextView"
            android:layout_toRightOf="@+id/minusButton"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/nol"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/plusButton"
            android:onClick="increaseQuantity"
            android:layout_toRightOf="@id/quantityTextView"
            android:layout_below="@id/quantityTitleTextView"
            android:text="@string/plus"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:layout_width="50dp"
            android:layout_height="50dp" />


    </RelativeLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:onClick="addToCard"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="40dp" />

</LinearLayout>

